[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/Main.tres" type="Theme" id=2]
[ext_resource path="res://Assets/Fonts/title_font.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scenes/Objects/BackgroundCube.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/UI/OptionsMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Tilesets/terrain.tres" type="TileSet" id=6]
[ext_resource path="res://Assets/Tilesets/background.tres" type="TileSet" id=7]
[ext_resource path="res://Scenes/UI/CreditsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Sprites/player/player_animations-Sheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/backgrounds/background_ground.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/backgrounds/background_sky.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/UI/arrows-Sheet.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/flag-Sheet.png" type="Texture" id=17]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 10 )
region = Rect2( 0, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 10 )
region = Rect2( 32, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 10 )
region = Rect2( 64, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 10 )
region = Rect2( 96, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 10 )
region = Rect2( 128, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 10 )
region = Rect2( 160, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 10 )
region = Rect2( 192, 160, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 10 )
region = Rect2( 224, 160, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 17 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 17 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 17 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 17 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 17 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 17 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 17 )
region = Rect2( 96, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 17 )
region = Rect2( 112, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=18]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 13 )
region = Rect2( 0, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 13 )
region = Rect2( 16, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 13 )
region = Rect2( 32, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 13 )
region = Rect2( 48, 32, 16, 16 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 13 )
region = Rect2( 0, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 13 )
region = Rect2( 16, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 13 )
region = Rect2( 32, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 13 )
region = Rect2( 48, 16, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 13 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 13 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 16, 16 )

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

[node name="BackgroundLayer" type="ParallaxBackground" parent="Background"]

[node name="Background0" type="ParallaxLayer" parent="Background/BackgroundLayer"]
motion_scale = Vector2( 0, 0 )

[node name="ColorRect" type="ColorRect" parent="Background/BackgroundLayer/Background0"]
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0.988235, 0.831373, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Background/BackgroundLayer/Background0"]
margin_left = -64.0
margin_top = -32.0
margin_right = 384.0
margin_bottom = 224.0
texture = ExtResource( 12 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cube" parent="Background/BackgroundLayer/Background0" instance=ExtResource( 4 )]
position = Vector2( 160, 72 )

[node name="Background1" type="ParallaxLayer" parent="Background/BackgroundLayer"]
motion_scale = Vector2( 0.2, 0.2 )

[node name="Background1" type="TextureRect" parent="Background/BackgroundLayer/Background1"]
margin_left = -256.0
margin_top = -72.0
margin_right = 576.0
margin_bottom = 184.0
texture = ExtResource( 11 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tilemaps" type="Node2D" parent="Background"]

[node name="BackgroundTileMap" type="TileMap" parent="Background/Tilemaps"]
z_index = -1
tile_set = ExtResource( 7 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 131053, 0, 3, 65536, 0, 0, 65537, 0, 2, 65554, 0, 0, 65555, 0, 2, 65557, 0, 3, 65575, 0, 0, 65576, 0, 2, 196587, 0, 0, 196588, 0, 1, 196589, 0, 65538, 196607, 0, 0, 131072, 0, 131073, 131073, 0, 131076, 131074, 0, 2, 131089, 0, 0, 131090, 0, 65537, 131091, 0, 65540, 131092, 0, 1, 131093, 0, 65538, 131109, 0, 3, 131111, 0, 65536, 131112, 0, 65538, 262123, 0, 65536, 262124, 0, 65540, 262125, 0, 65537, 262126, 0, 2, 262143, 0, 65539, 196609, 0, 131072, 196610, 0, 65538, 196625, 1, 0, 196626, 1, 1, 196627, 1, 2, 196628, 0, 65537, 196629, 0, 65538, 196645, 0, 65536, 196646, 0, 1, 196647, 0, 65537, 196648, 0, 65538, 327659, 0, 65536, 327660, 1, 0, 327661, 1, 1, 327662, 1, 2, 327678, 0, 0, 327679, 0, 196612, 262144, 0, 2, 262146, 0, 65536, 262147, 0, 2, 262160, 0, 0, 262161, 1, 131072, 262162, 1, 131073, 262163, 1, 131074, 262164, 0, 131076, 262165, 0, 65540, 262166, 0, 2, 262181, 0, 65536, 262182, 0, 4, 262183, 0, 65537, 262184, 0, 65538, 393195, 0, 65536, 393196, 1, 131072, 393197, 1, 131073, 393198, 1, 131074, 393214, 0, 65536, 393215, 0, 131076, 327680, 0, 131076, 327681, 1, 0, 327682, 1, 1, 327683, 1, 2, 327684, 0, 2, 327695, 0, 196608, 327696, 0, 65538, 327698, 0, 65536, 327699, 0, 4, 327700, 1, 0, 327701, 1, 1, 327702, 1, 1, 327703, 1, 2, 327716, 0, 0, 327717, 0, 65537, 327718, 0, 131076, 327719, 0, 65537, 327720, 0, 65538, 458731, 0, 65536, 458732, 0, 4, 458733, 0, 65538, 458749, 1, 0, 458750, 1, 1, 458751, 1, 1, 393216, 1, 1, 393217, 1, 196612, 393218, 1, 196612, 393219, 1, 65538, 393220, 0, 131074, 393232, 0, 65536, 393233, 0, 1, 393234, 0, 4, 393235, 0, 65537, 393236, 1, 131072, 393237, 1, 131073, 393238, 1, 131073, 393239, 1, 131074, 393251, 0, 196608, 393252, 0, 4, 393253, 0, 4, 393254, 0, 196612, 393255, 0, 196612, 393256, 0, 65538, 524267, 0, 65536, 524268, 0, 4, 524269, 0, 131076, 524270, 0, 1, 524271, 0, 2, 524284, 0, 196608, 524285, 1, 65536, 524286, 1, 4, 524287, 1, 65537, 458752, 1, 131073, 458753, 1, 131073, 458754, 1, 131073, 458755, 1, 131074, 458767, 0, 0, 458768, 0, 4, 458769, 0, 65537, 458770, 0, 65537, 458771, 0, 4, 458772, 0, 4, 458773, 0, 65540, 458774, 0, 131074, 458788, 0, 65536, 458789, 0, 131076, 458790, 0, 131076, 458791, 0, 4, 458792, 0, 65538, 589803, 0, 65536, 589804, 0, 4, 589805, 0, 65540, 589806, 0, 196612, 589807, 0, 131074, 589821, 1, 131072, 589822, 1, 131073, 589823, 1, 131074, 524288, 0, 65540, 524289, 0, 131076, 524290, 0, 131076, 524291, 0, 65537, 524292, 0, 2, 524296, 0, 0, 524297, 0, 2, 524301, 0, 0, 524302, 0, 1, 524303, 0, 131073, 524304, 0, 131076, 524305, 0, 4, 524306, 0, 131076, 524307, 0, 131076, 524308, 0, 131076, 524309, 0, 65538, 524311, 0, 3, 524323, 0, 196608, 524324, 1, 0, 524325, 1, 1, 524326, 1, 2, 524327, 0, 65537, 524328, 0, 65538, 655339, 0, 65536, 655340, 0, 131076, 655341, 0, 65540, 655342, 0, 65538, 655356, 0, 0, 655357, 0, 65540, 655358, 0, 196612, 655359, 0, 196612, 589824, 0, 196612, 589825, 0, 4, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65538, 589830, 0, 0, 589831, 1, 0, 589832, 1, 2, 589833, 0, 131076, 589834, 0, 1, 589835, 0, 2, 589837, 0, 65536, 589838, 0, 65538, 589840, 0, 65536, 589841, 0, 4, 589842, 0, 196612, 589843, 0, 65540, 589844, 0, 4, 589845, 0, 131076, 589846, 0, 1, 589847, 0, 65538, 589860, 1, 65536, 589861, 1, 4, 589862, 1, 65538, 589863, 0, 196612, 589864, 0, 65538, 720875, 0, 65536, 720876, 0, 196612, 720877, 0, 131076, 720878, 0, 131076, 720879, 0, 1, 720880, 0, 2, 720890, 0, 0, 720891, 0, 1, 720892, 0, 4, 720893, 0, 65537, 720894, 0, 4, 720895, 0, 131076, 655360, 0, 65537, 655361, 0, 65540, 655362, 0, 131076, 655363, 0, 65537, 655364, 0, 131076, 655365, 0, 1, 655366, 0, 65537, 655367, 1, 65536, 655368, 1, 65538, 655369, 0, 65537, 655370, 0, 196612, 655371, 0, 65540, 655372, 0, 1, 655373, 0, 196612, 655374, 1, 0, 655375, 1, 1, 655376, 1, 2, 655377, 0, 65540, 655378, 0, 65540, 655379, 0, 4, 655380, 0, 4, 655381, 0, 4, 655382, 0, 65540, 655383, 0, 196612, 655384, 0, 2, 655394, 0, 0, 655395, 0, 1, 655396, 1, 131072, 655397, 1, 131073, 655398, 1, 131074, 655399, 0, 65537, 655400, 0, 65538, 786411, 0, 65536, 786412, 0, 65540, 786413, 0, 65540, 786414, 0, 196612, 786415, 0, 196612, 786416, 0, 65538, 786426, 0, 65536, 786427, 0, 4, 786428, 0, 65540, 786429, 0, 4, 786430, 0, 65540, 786431, 0, 65537, 720896, 0, 131076, 720897, 0, 65537, 720898, 0, 196612, 720899, 0, 65540, 720900, 0, 4, 720901, 0, 65537, 720902, 0, 4, 720903, 1, 65536, 720904, 1, 65538, 720905, 0, 196612, 720906, 0, 131076, 720907, 0, 4, 720908, 0, 196612, 720909, 0, 65537, 720910, 1, 65536, 720911, 1, 65540, 720912, 1, 65537, 720913, 1, 196610, 720914, 0, 196612, 720915, 0, 4, 720916, 0, 4, 720917, 0, 65540, 720918, 0, 4, 720919, 0, 4, 720920, 0, 65538, 720930, 0, 65536, 720931, 0, 196612, 720932, 0, 196612, 720933, 0, 65537, 720934, 0, 196612, 720935, 0, 65540, 720936, 0, 65538, 851947, 0, 131072, 851948, 0, 131073, 851949, 0, 131073, 851950, 0, 131073, 851951, 0, 131073, 851952, 0, 131073, 851953, 0, 196609, 851954, 0, 196609, 851955, 0, 196609, 851956, 0, 196609, 851957, 0, 196609, 851958, 0, 196609, 851959, 0, 196609, 851960, 0, 196609, 851961, 0, 196609, 851962, 0, 131073, 851963, 0, 131073, 851964, 0, 131073, 851965, 0, 131073, 851966, 0, 131073, 851967, 0, 131073, 786432, 0, 131073, 786433, 0, 131073, 786434, 0, 131073, 786435, 0, 131073, 786436, 0, 131073, 786437, 0, 131073, 786438, 0, 131073, 786439, 1, 131072, 786440, 1, 131074, 786441, 0, 131073, 786442, 0, 131073, 786443, 0, 131073, 786444, 0, 131073, 786445, 0, 131073, 786446, 1, 131072, 786447, 1, 131073, 786448, 1, 131074, 786449, 0, 131073, 786450, 0, 131073, 786451, 0, 131073, 786452, 0, 131073, 786453, 0, 131073, 786454, 0, 131073, 786455, 0, 131073, 786456, 0, 131073, 786457, 0, 196609, 786458, 0, 196609, 786459, 0, 196609, 786460, 0, 196609, 786461, 0, 196609, 786462, 0, 196609, 786463, 0, 196609, 786464, 0, 196609, 786465, 0, 196609, 786466, 0, 131073, 786467, 0, 131073, 786468, 0, 131073, 786469, 0, 131073, 786470, 0, 131073, 786471, 0, 131073, 786472, 0, 131074 )

[node name="TerrainTileMap" type="TileMap" parent="Background/Tilemaps"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 196588, 13, 0, 131072, 11, 0, 131091, 14, 0, 131111, 3, 0, 131112, 3, 2, 262123, 3, 0, 262124, 3, 2, 262143, 3, 0, 196608, 3, 2, 196627, 3, 0, 196628, 3, 2, 196647, 3, 65536, 196648, 8, 0, 327659, 3, 65536, 327660, 3, 65538, 327679, 3, 65536, 262144, 3, 65538, 262145, 13, 1, 262163, 3, 65536, 262164, 3, 65538, 262182, 11, 0, 262183, 0, 65536, 262184, 8, 0, 393195, 0, 65536, 393196, 3, 65538, 393213, 9, 65537, 393214, 9, 1, 393215, 3, 65536, 327680, 3, 65540, 327681, 3, 2, 327698, 11, 1, 327699, 0, 65536, 327700, 0, 65538, 327701, 13, 0, 327716, 12, 0, 327718, 3, 0, 327719, 3, 65540, 327720, 8, 0, 458731, 0, 65536, 458732, 0, 65538, 458733, 9, 0, 458751, 0, 65536, 393216, 0, 196612, 393217, 0, 65538, 393234, 3, 0, 393235, 3, 131076, 393236, 0, 4, 393237, 3, 2, 393252, 9, 1, 393253, 2, 196608, 393254, 2, 196609, 393255, 2, 196609, 393256, 2, 196610, 524267, 0, 65536, 524268, 0, 65538, 524269, 13, 0, 524270, 13, 0, 524286, 13, 0, 524287, 0, 65536, 458752, 8, 0, 458753, 0, 65538, 458754, 9, 0, 458768, 2, 0, 458769, 2, 1, 458770, 2, 2, 458771, 1, 65537, 458772, 8, 0, 458773, 3, 65538, 458790, 1, 65536, 458791, 1, 196612, 458792, 8, 0, 589803, 8, 0, 589804, 2, 196608, 589805, 2, 196609, 589806, 2, 196610, 589822, 3, 0, 589823, 3, 65540, 524288, 0, 196612, 524289, 0, 65538, 524291, 13, 1, 524304, 2, 131072, 524305, 2, 131073, 524306, 2, 131074, 524307, 8, 0, 524308, 0, 65537, 524309, 0, 65538, 524310, 11, 0, 524326, 1, 65536, 524327, 8, 0, 524328, 8, 0, 655339, 8, 0, 655340, 1, 4, 655341, 1, 65538, 655357, 13, 0, 655358, 3, 65536, 655359, 8, 0, 589824, 0, 65537, 589825, 2, 196608, 589826, 2, 196609, 589827, 2, 196609, 589828, 2, 196610, 589840, 13, 2, 589841, 1, 65536, 589842, 1, 4, 589843, 8, 0, 589844, 2, 196608, 589845, 2, 196609, 589846, 2, 196610, 589861, 13, 0, 589862, 3, 65536, 589863, 8, 0, 589864, 8, 0, 720875, 8, 0, 720876, 8, 0, 720877, 1, 65538, 720892, 2, 196608, 720893, 2, 196609, 720894, 2, 196610, 720895, 8, 0, 655360, 8, 0, 655361, 1, 131076, 655362, 1, 65538, 655376, 1, 0, 655377, 1, 196612, 655378, 8, 0, 655379, 8, 0, 655380, 1, 131076, 655381, 1, 65538, 655397, 3, 0, 655398, 3, 131076, 655399, 8, 0, 655400, 8, 0, 786411, 8, 0, 786412, 8, 0, 786413, 1, 196612, 786414, 1, 2, 786429, 1, 65536, 786430, 8, 0, 786431, 8, 0, 720896, 8, 0, 720897, 8, 0, 720898, 1, 65538, 720912, 1, 65536, 720913, 8, 0, 720914, 8, 0, 720915, 8, 0, 720916, 8, 0, 720917, 1, 65538, 720933, 1, 65536, 720934, 8, 0, 720935, 8, 0, 720936, 8, 0, 851947, 8, 0, 851948, 8, 0, 851949, 8, 0, 851950, 1, 131074, 851965, 1, 131072, 851966, 8, 0, 851967, 8, 0, 786432, 8, 0, 786433, 8, 0, 786434, 1, 131074, 786448, 1, 131072, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 8, 0, 786453, 1, 131074, 786469, 1, 131072, 786470, 8, 0, 786471, 8, 0, 786472, 8, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Background"]
position = Vector2( 80, 144 )
frames = SubResource( 9 )
playing = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Background"]
position = Vector2( 264, 104 )
frames = SubResource( 18 )
frame = 3
playing = true

[node name="MainMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="MainMenu"]
anchor_right = 1.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
text = "A KEY(S) PATH"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -24.0
margin_top = -28.0
margin_right = 24.0
margin_bottom = -8.83447
mouse_default_cursor_shape = 2
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -34.0
margin_right = 72.0
margin_bottom = 21.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="MainMenu/VBoxContainer"]
margin_right = 144.0
margin_bottom = 32.0
rect_min_size = Vector2( 144, 32 )
mouse_default_cursor_shape = 2
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenu/VBoxContainer"]
margin_top = 36.0
margin_right = 144.0
margin_bottom = 55.0

[node name="Options" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer"]
margin_right = 70.0
margin_bottom = 19.1655
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Options"

[node name="Credits" type="Button" parent="MainMenu/VBoxContainer/HBoxContainer"]
margin_left = 74.0
margin_right = 144.0
margin_bottom = 19.1655
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Credits"

[node name="LevelsMenu" type="Control" parent="."]
anchor_top = -1.02222
anchor_right = 1.0
anchor_bottom = -0.0222222
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="LevelsBack" type="TextureButton" parent="LevelsMenu"]
anchor_left = 0.5
anchor_top = 1.022
anchor_right = 0.5
anchor_bottom = 1.022
margin_left = -8.0
margin_top = -23.96
margin_right = 8.0
margin_bottom = -7.96001
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 19 )
texture_pressed = SubResource( 20 )
texture_hover = SubResource( 21 )
texture_disabled = SubResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsMenu" parent="." instance=ExtResource( 5 )]
anchor_left = -1.0
anchor_right = 0.0

[node name="OptionsBack" type="TextureButton" parent="OptionsMenu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -24.0
margin_top = 5.0
margin_right = -8.0
margin_bottom = 21.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 23 )
texture_pressed = SubResource( 24 )
texture_hover = SubResource( 25 )
texture_disabled = SubResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsMenu" parent="." instance=ExtResource( 8 )]
anchor_left = 1.0
anchor_right = 2.0

[node name="CreditsBack" type="TextureButton" parent="CreditsMenu"]
margin_left = 8.0
margin_top = 5.0
margin_right = 24.0
margin_bottom = 21.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = SubResource( 27 )
texture_pressed = SubResource( 28 )
texture_hover = SubResource( 29 )
texture_disabled = SubResource( 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MainMenu/VBoxContainer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="LevelsMenu/LevelsBack" to="." method="_on_LevelsBack_pressed"]
[connection signal="pressed" from="OptionsMenu/OptionsBack" to="." method="_on_OptionsBack_pressed"]
[connection signal="pressed" from="CreditsMenu/CreditsBack" to="." method="_on_CreditsBack_pressed"]
